# mcp-proxy

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  config.example.toml  gateway-auth.toml
.github/workflows/: ci.yml  release-plz.yml
benches/: proxy_overhead.rs
charts/mcp-proxy/: Chart.yaml  values.yaml
charts/mcp-proxy/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/mcp-proxy/templates/tests/: test-health.yaml
docs/: architectures.md  design.md
examples/: canary-rollout.toml  compliance.toml  cost-optimization.toml  custom_middleware.rs  developer-local.toml  dynamic_backends.rs  enterprise-hub.toml  gateway-filter.toml  gateway-validation.toml  gateway.toml  library-mode.rs  multi-instance-redis.toml  oauth_setup.rs  programmatic.rs  resilience.rs  scoped_tokens.rs  search_mode.rs  testing-sandbox.toml  websocket-backend.toml
examples/docker-compose/: Dockerfile.everything  README.md  docker-compose.yml  gateway.toml  proxy.toml
src/: access_log.rs  admin.rs  admin_tools.rs  alias.rs  bearer_scope.rs  builder.rs  cache.rs  canary.rs  coalesce.rs  composite.rs  config.rs  discovery.rs  failover.rs  filter.rs  gateway.rs  inject.rs  introspection.rs  lib.rs  main.rs  mcp_json.rs  metrics.rs  mirror.rs  outlier.rs  param_override.rs  proxy.rs  rbac.rs  reload.rs  retry.rs  skills.rs  test_util.rs  token.rs  validation.rs  ws_transport.rs
src/skills/: check_config.md  configure_auth.md  configure_resilience.md  diagnose.md  explain_config.md  setup.md  status.md
tests/: cache_backends.rs  e2e.rs  http_e2e.rs  integration.rs
