[package]
name = "mcp-proxy"
version = "0.1.1"
edition = "2024"
rust-version = "1.90"
description = "Standalone MCP proxy -- config-driven reverse proxy with auth, rate limiting, and observability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/mcp-proxy"
homepage = "https://github.com/joshrotenberg/mcp-proxy"

[lib]
name = "mcp_proxy"

[[bin]]
name = "mcp-proxy"
path = "src/main.rs"

[features]
default = ["otel", "metrics", "oauth"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
oauth = ["tower-mcp/oauth", "tower-mcp/jwks"]

[dependencies]
tower-mcp = { version = "0.8.3", features = ["http", "http-client", "proxy"] }
tower-mcp-types = "0.8.3"
axum = "0.8"
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-resilience = { version = "0.9.1", default-features = false, features = ["circuitbreaker", "ratelimiter", "hedge", "retry"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
metrics = { version = "0.24.3", optional = true }
metrics-exporter-prometheus = { version = "0.18.1", optional = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29", optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
chrono = { version = "0.4", features = ["serde"] }
schemars = "1"
moka = { version = "0.12.14", features = ["future"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
glob-match = "0.2"
notify-debouncer-mini = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
tower-resilience-chaos = "0.9"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
strip = true
